[package]
name = "bun-cli"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Arce <arcex@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
comfy-table = "7.1.0"
crossterm = "0.27.0"
inquire = "0.7.4"
