[package]
name = "bun-cli"
version = "0.2.0"
edition = "2021"
authors = ["Kevin Arce <arcex@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Bun CLI Generator is a command-line tool built in Rust, designed to streamline the process of setting up new Bun projects. With a simple command, users can generate a basic Bun project structure, including necessary configuration files and a ready-to-go project setup, saving time and setting a standard structure for Bun applications."
readme = "README.md"
homepage = "https://github.com/KevinArce/bun-cli"
repository = "https://github.com/KevinArce/bun-cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
